# HEBI-ROS-DEPRECATED

./: .gitignore  .travis.yml  CMakeLists.txt  Hebi_map.yaml  README.md  package.xml
example_nodes/: CMakeLists.txt  package.xml
example_nodes/action/: ArmMotion.action  BaseMotion.action
example_nodes/include/gains/: 6-DoF-Arm-Gains-Rosie.xml  omnibase_gains.xml
example_nodes/include/hebi/: command.cpp  command.hpp  gains.hpp  group.hpp  group_info.cpp  info.hpp  log_file.hpp  mac_address.cpp  mac_address.hpp  robot_model.cpp  trajectory.cpp  util.hpp  vector_3_f.hpp
example_nodes/include/hebiros/: hebiros.cpp  hebiros.h  hebiros_actions.cpp  hebiros_actions.h  hebiros_group.cpp  hebiros_group_gazebo.cpp  hebiros_group_gazebo.h  hebiros_parameters.cpp  hebiros_parameters.h  hebiros_publishers_gazebo.h  hebiros_services.cpp  hebiros_services_gazebo.h  hebiros_subscribers_gazebo.cpp  hebiros_subscribers_gazebo.h  hebiros_subscribers_physical.h
example_nodes/include/util/: grav_comp.hpp  input.hpp  trajectory_time_heuristic.hpp
example_nodes/launch/: ROSie.launch  VisionThreshold.launch  arm_node.launch  demo1.launch  demo2.launch  demo3.launch  demo4.launch  demo5.launch  free_roam.launch  odometry.launch  rosie_free_roam.launch  trajectory_free_roam.launch
example_nodes/msg/: State.msg  TargetWaypoints.msg  Waypoint.msg
example_nodes/src/: key_read.py  omnibase_node.cpp  omnibase_node_trajectory.cpp  omnibase_odometry.cpp
example_nodes/src/Rosie_Demo/: INSTALL.md  README.md  Rosie_arm_node.cpp  Rosie_base_node.cpp  arm.cpp  arm.hpp  arm_kinematics.cpp  arm_kinematics.hpp  arm_trajectory.cpp  arm_trajectory.hpp  demo_central.cpp  gripper_node.cpp  imgui.ini  key_read_rosie.py  rosie_arm_gains.xml  rosie_base_gains.xml  rosie_gripper_gains.xml  rosie_wheel_gains.xml  vision_process.cpp  vision_threshold.cpp
example_nodes/src/arm_node/: 07_userinput_ik.cpp  arm.cpp  arm.hpp  arm_kinematics.cpp  arm_kinematics.hpp  arm_node.cpp  arm_trajectory.cpp  key_read_arm.py
example_nodes/src/omnibase/: omnibase_gains.xml  omnibase_node_trajectory.cpp  omnibase_waypoint.cpp
example_nodes/srv/: CalibrateSrv.srv  GripperSrv.srv  VisionSrv.srv
hebi/: CMakeLists.txt  package.xml
hebi/hebi/: hebi.rviz
hebi/hebi/launch/: group_with_urdf.launch
hebi/hebi/meshes/: x_wrist.stl
hebi/hebi/src/: example_node.cpp
hebi/hebi/urdf/: x_demo.xacro  x_shoulder_bracket.xacro
hebi/msg/: Entry.msg  EntryList.msg
hebi/src/: group_node.cpp  hebicore_node.cpp
hebi/srv/: entry_list.srv
hebi/urdf/: README.txt  elbow_module.xacro  extension_module.xacro  mecanum.xacro  x_wheeled_platform.xacro
hebiros/: CHANGELOG.rst  CMakeLists.txt  package.xml
hebiros/action/: Trajectory.action
hebiros/include/hebi/: color.hpp  command.cpp  command.hpp  feedback.cpp  feedback.hpp  group.cpp  group.hpp  group_command.cpp  group_command.hpp  group_feedback.cpp  group_feedback.hpp  group_info.cpp  group_info.hpp  hebi.h  info.cpp  info.hpp  log_file.cpp  log_file.hpp  lookup.cpp  lookup.hpp  mac_address.cpp  mac_address.hpp  quaternion_f.hpp  (+5 more)
hebiros/launch/: hebiros.launch  hebiros_gazebo.launch  test_fk_1.test
hebiros/msg/: CommandMsg.msg  EntryListMsg.msg  EntryMsg.msg  FeedbackMsg.msg  PidGainsMsg.msg  SettingsMsg.msg
hebiros/src/: hebiros.cpp  hebiros_actions.cpp  hebiros_clients.cpp  hebiros_group.cpp  hebiros_group_gazebo.cpp  hebiros_group_physical.cpp  hebiros_group_registry.cpp  hebiros_model.cpp  hebiros_node.cpp  hebiros_parameters.cpp  hebiros_publishers.cpp  hebiros_publishers_gazebo.cpp  hebiros_publishers_physical.cpp  hebiros_services.cpp  hebiros_services_gazebo.cpp  hebiros_services_physical.cpp  hebiros_subscribers.cpp  hebiros_subscribers_gazebo.cpp  hebiros_subscribers_physical.cpp
hebiros/srv/: AddGroupFromURDFSrv.srv  AddModelFromURDFSrv.srv  ModelFkSrv.srv  SendCommandWithAcknowledgementSrv.srv  SetCommandLifetimeSrv.srv  SetFeedbackFrequencySrv.srv
hebiros/tests/: test_fk_1.cpp
hebiros_advanced_examples/: CHANGELOG.rst  CMakeLists.txt  package.xml
hebiros_advanced_examples/gazebo_hebiros/: CMakeLists.txt  package.xml
hebiros_advanced_examples/mobile_robot_hebiros/: CMakeLists.txt  package.xml
hebiros_advanced_examples/moveit_hebiros/: CMakeLists.txt  package.xml
hebiros_advanced_examples/omnibase_hebiros/: CMakeLists.txt  package.xml
hebiros_advanced_examples/other_examples_hebiros/: CMakeLists.txt  package.xml
hebiros_advanced_examples/rviz_hebiros/: CMakeLists.txt  package.xml
hebiros_advanced_examples/x_demo/: package.xml
hebiros_basic_examples/: CHANGELOG.rst  CMakeLists.txt  package.xml
hebiros_basic_examples/launch/: example_01_lookup.launch  example_02_feedback.launch  example_03_command.launch  example_04_trajectory.launch  example_05_kinematics.launch
hebiros_basic_examples/src/: example_01_lookup_node.cpp  example_02_feedback_node.cpp  example_03_command_node.cpp  example_04_trajectory_node.cpp  example_05_kinematics_node.cpp
hebiros_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
hebiros_description/meshes/: A-2038-02.stl  A-2039-02.stl  PM-2132-01L.stl  PM-2132-01R.stl  PM-2146-02.stl  PM-2147-02.stl  PM-2149-01.stl  PM-2150-01L.stl  PM-2150-01R.stl  omnibase_simple.stl  omniwheels.stl  output_bracket.stl  x5.stl  x8.stl
hebiros_description/urdf/: 1_dof.urdf  1_dof.xacro  1_dof_arm.urdf  1_dof_arm.xacro  2_dof_arm.urdf  2_dof_arm.xacro  3_dof_arm.urdf  3_dof_arm.xacro  4_dof_arm.urdf  4_dof_arm.xacro  5_dof_arm.urdf  5_dof_arm.xacro  6_dof_arm.urdf  6_dof_arm.xacro  A-2085-06.urdf  A-2085-06.xacro  common_properties.xacro  igor.urdf  igor.xacro  omnibase.xacro  rosie.xacro  rosie_wheel.xacro  scara_style_4_dof_arm.urdf  scara_style_4_dof_arm.xacro  x5.xacro  x5M.xacro  x5_heavy_left_inside_bracket.xacro  x5_heavy_left_outside_bracket.xacro  x5_heavy_right_inside_bracket.xacro  x5_heavy_right_outside_bracket.xacro  x5_light_left_bracket.xacro  x5_light_right_bracket.xacro  x8.xacro  x_demo.urdf  x_demo.xacro  x_library.xacro  x_series_common.xacro  x_shoulder_bracket.xacro  x_tube_link.xacro  x_wrist_bracket.xacro
(+332 files in other folders)
