<?xml version="1.0"?>
<package format="2">
  <name>hebiros</name>
  <version>2.0.0</version>
  <description>The hebiros package</description>

  <maintainer email="matt@hebirobotics.com">Matthew Tesch</maintainer>

  <license>https://www.hebirobotics.com/softwarelicense/</license>

  <url type="website">http://wiki.ros.org/hebiros</url>
  <url type="repository">https://github.com/HebiRobotics/HEBI-ROS.git</url>
  <url type="bugtracker">https://github.com/HebiRobotics/HEBI-ROS/issues</url>

  <author email="x@hebirobotics.com">Xavier Artache</author>
  <author email="matt@hebirobotics.com">Matthew Tesch</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>tf</depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>hebi_cpp_api</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
