<?xml version="1.0"?>
<package>
  <name>hebiros_basic_examples</name>
  <version>1.2.0</version>
  <description>Basic examples for hebiros with no additional dependencies</description>

  <maintainer email="x@hebirobotics.com">Xavier Artache</maintainer>

  <license>TODO</license>

  <author email="x@hebirobotics.com">Xavier Artache</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hebiros</build_depend>
  <run_depend>hebiros</run_depend>

  <export>
  </export>
</package>
