<?xml version="1.0"?>
<package>
  <name>hebiros_basic_examples</name>
  <version>2.0.0</version>
  <description>Basic examples for hebiros with no additional dependencies</description>

  <maintainer email="matt@hebirobotics.com">Matthew Tesch</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/hebiros</url>
  <url type="repository">https://github.com/HebiRobotics/HEBI-ROS.git</url>
  <url type="bugtracker">https://github.com/HebiRobotics/HEBI-ROS/issues</url>

  <author email="x@hebirobotics.com">Xavier Artache</author>
  <author email="matt@hebirobotics.com">Matthew Tesch</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hebiros</build_depend>
  <run_depend>hebiros</run_depend>

  <export>
  </export>
</package>
