<?xml version="1.0"?>
<package>
  <name>hebiros_description</name>
  <version>0.0.1</version>
  <description>Models for Hebi components and hebiros</description>

  <maintainer email="x@hebirobotics.com">Xavier Artache</maintainer>

  <license>TODO</license>

  <author email="x@hebirobotics.com">Xavier Artache</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
