<?xml version="1.0"?>
<package>
  <name>hebiros_description</name>
  <version>1.2.0</version>
  <description>Models for Hebi components and hebiros</description>

  <maintainer email="x@hebirobotics.com">Xavier Artache</maintainer>

  <license>TODO</license>

  <author email="x@hebirobotics.com">Xavier Artache</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>transmission_interface</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>transmission_interface</run_depend>

  <export>
  </export>
</package>
