<?xml version="1.0"?>
<package>
  <name>hebiros_description</name>
  <version>2.0.0</version>
  <description>Models for HEBI components and hebiros</description>

  <maintainer email="matt@hebirobotics.com">Matthew Tesch</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/hebiros</url>
  <url type="repository">https://github.com/HebiRobotics/HEBI-ROS.git</url>
  <url type="bugtracker">https://github.com/HebiRobotics/HEBI-ROS/issues</url>

  <author email="x@hebirobotics.com">Xavier Artache</author>
  <author email="matt@hebirobotics.com">Matthew Tesch</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>transmission_interface</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>transmission_interface</run_depend>

  <export>
  </export>
</package>
